--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "devDependencies": {
     "@trybe/eslint-config-frontend": "^1.11.3",
     "vite": "^4.3.9"
+  },
+  "dependencies": {
+    "sweetalert2": "^11.7.12"
   }
 }
